--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.5",
     "eslint": "8.48.0",
@@ -63,7 +65,6 @@
     "express-rate-limit": "^7.4.1",
     "lucide-react": "^0.447.0",
     "match-sorter": "^6.3.4",
-    "natural": "^8.0.1",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.2.1",
@@ -84,7 +85,6 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "twitter-api-v2": "^1.18.1",
     "typescript": "5.2.2",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
